hopefully fix home and faq overflow problems on mobile view

--- a/css/faq.css
+++ b/css/faq.css
@@ -36,3 +36,12 @@
   padding: 10px;
   display: inline-block;
 }
+
+@media (max-width: 700px) {
+  .question {
+    width: 300px;
+  }
+  .answer {
+    width: 280px;
+  }
+}
