--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,7 @@
   left: 15%;
   top: 25%;
   position: absolute;
+  max-width: 100%;
 }
 
 .title-img {
